--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Merriweather">
         <link href="css/styles.css" rel="stylesheet" />
+        <title>Xinwei Yao</title>
   </head>
   
   <body>
