--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <p class="umimport">2019.09-2023.06 &emsp;School of Finance &emsp;Renmin University of China</p>
     
     <h2>Projects</h2>
-    <h2 class="import">Green Finance, Government and Carbon Emission</h2>
+    <h2 class="import"><a href="greenfinance_v1.3.pdf">Green Finance, Government and Carbon Emission</a></h2>
+    <p class="umimport"><i>with <a href="https://scholar.google.ru/citations?user=aDeBIgwAAAAJ&hl=zh-CN&oi=sra">Liping Lu</a> and Yongqi Huang</i></p>
     <p class="umimport">With China's carbon peaking and carbon neutrality goals coming up, the problem over how to reduce carbon emission and grow more sustainably is increasingly importaant. To find out whether green finance is beneficial for reducing the carbon and how the government works, we uses the data of 285 cities in China from 2013 to 2017, exploring the impact of green financial development on carbon emission through panel data model. Based on the different model settings and variable measures, we control the endogeneity of the related variables. </p>
     <h2 class="import">What Factors influence Migrant Workers' Medical Welfare</h2>
     <p class="umimport">Migrant workers in China often suffer from many difficulties when going to the hospital for reimbursement of medical expenses because of household registration. To solve these problems the Chinese government has introduced many policies for migrant workers' medical treatment recent years. In order to see whether workers' welfare has been improved and what factors matter most, we design a questionnaire and a model to analyse the issue, and also interview some doctors in Beijing to figure out the effectiveness of policy implementation.</p>
