change description and email

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2>Projects</h2>
     <h2 class="import"><a href="greenfinance_v1.3.pdf">Green Finance, Government and Carbon Emission</a></h2>
     <p class="umimport"><i>with <a href="https://scholar.google.ru/citations?user=aDeBIgwAAAAJ&hl=zh-CN&oi=sra">Liping Lu</a> and Yongqi Huang</i></p>
-    <p class="umimport">With China's carbon peaking and carbon neutrality goals coming up, the problem over how to reduce carbon emission and grow more sustainably is increasingly importaant. To find out whether green finance is beneficial for reducing the carbon and how the government works, we uses the data of 285 cities in China from 2013 to 2017, exploring the impact of green financial development on carbon emission through panel data model. Based on the different model settings and variable measures, we control the endogeneity of the related variables. </p>
+    <p class="umimport">With China's carbon peaking and carbon neutrality goals coming up, the problem over how to reduce carbon emission and grow more sustainably is increasingly important. To find out whether green finance is beneficial for reducing carbon emissions and how the mechanism is, we uses the data of 298 cities in China from 2012 to 2019, exploring the impact of green financial development on carbon emissions through panel data model. Based on the different model settings and variable measures, we find that in the short term green finance policies fail to reduce carbon emissions. </p>
     <h2 class="import">What Factors influence Migrant Workers' Medical Welfare</h2>
     <p class="umimport">Migrant workers in China often suffer from many difficulties when going to the hospital for reimbursement of medical expenses because of household registration. To solve these problems the Chinese government has introduced many policies for migrant workers' medical treatment recent years. In order to see whether workers' welfare has been improved and what factors matter most, we design a questionnaire and a model to analyse the issue, and also interview some doctors in Beijing to figure out the effectiveness of policy implementation.</p>
     <h2 class="import">Shaow Empire: the Collapse of Xiao Jianhua's Financial Empire</h2>
@@ -36,14 +36,16 @@
 
     <h2>Experience</h2>
     <h2 class="import">Baywise Private Equity Fund</h2>
-    <p class="umimport"><i>Analysis Assistant Intern</i> &emsp;Conducted financial analysis of firms invested in such as Wisers Information Limited, a SaaS company, and Panda
+    <p class="umimport"><i>Analysis Assistant Intern</i></p>
+    <p class="umimport">Conducted financial analysis of firms invested in such as Wisers Information Limited, a SaaS company, and Panda
 Insurance, focused on insurance fintech and offered risk disclosure as well as operational advice. Compiled quarterly reports about the private equity fund, calculating earnings of the fund and investors and submitted
 quarterly information disclosure reports, monitoring the operation of subsidiaries.</p>
 
     <h2 class="import">China Europe International Business School</h2>
-    <p class="umimport"><i>Research Assistant</i> &emsp;Verified data from law database of Pecking University, improving the accuracy of natural language processing.</p>
+    <p class="umimport"><i>Research Assistant</i> </p>
+    <p class="umimport">Verified data from law database of Pecking University, improving the accuracy of natural language processing.</p>
     <h2>Contact Information</h2>
-    <p class="umimport">Email:<a href="mailto:staryaoxinwei@ruc.edu.cn">staryaoxinwei@ruc.edu.cn</a></p>
+    <p class="umimport">Email:<a href="mailto:yaoxinwei0754@ruc.edu.cn">yaoxinwei0754@ruc.edu.cn</a></p>
     <p class="umimport">Phone: +86 13267755202</p>
 
     <br>
