--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ quarterly information disclosure reports, monitoring the operation of subsidiari
     <p class="umimport"><i>Research Assistant</i> </p>
     <p class="umimport">Verified data from law database of Pecking University, improving the accuracy of natural language processing.</p>
     <h2>Contact Information</h2>
-    <p class="umimport">Email:<a href="mailto:yaoxinwei0754@ruc.edu.cn">yaoxinwei0754@ruc.edu.cn</a></p>
+    <p class="umimport">Email: <a href="mailto:yaoxinweimore@gmail.com">yaoxinweimore@gmail.com</a>(preferred);&emsp;<a href="mailto:yaoxinwei0754@ruc.edu.cn">yaoxinwei0754@ruc.edu.cn</a></p>
     <p class="umimport">Phone: +86 13267755202</p>
 
     <br>
